<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/sttitle"
                android:textSize="30dp"
                android:textColor="@color/purple_700"
                />
            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:src="@drawable/marks"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/stname"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/purple_700"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stname"
                android:textColor="@color/black"
                android:gravity="center"
                />


        </LinearLayout>


        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/module1"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/purple_700"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/module1"
                android:textColor="@color/black"
                android:gravity="center"
                />


        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/module2"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/purple_700"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/module2"
                android:textColor="@color/black"
                android:gravity="center"
                />


        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/module3"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/purple_700"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/module3"
                android:textColor="@color/black"
                android:gravity="center"
                />


        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/module4"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/purple_700"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/module4"
                android:textColor="@color/black"
                android:gravity="center"
                />


        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/purple_700"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/total"
                android:textColor="@color/black"
                android:gravity="center"
                />


        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/avg"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/purple_700"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/avg"
                android:textColor="@color/black"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn1"
                android:text="@string/ok"
                android:background="@color/purple_200"
                android:textColor="@color/white"
                />
            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn2"
                android:text="@string/clear"
                android:backgroundTint="@color/purple_200"
                android:background="@color/cardview_shadow_start_color"
                android:textColor="@color/black"
                />






        </LinearLayout>


    </LinearLayout>

</LinearLayout>